# iris_task

./: .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
core_api/: urls.py
core_api/api/v1/: cubes.py
core_api/schema/: cube.py
core_api/tasks/: calculate_cube_stack.py  calculate_volume.py  convert_cube.py
core_api/tests/: tests_cube_api.py
settings/: celery.py  settings.py  urls.py
