[tool.poetry]
name = "irisai_task"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
djangorestframework = "^3.13.1"
drf-yasg = "^1.20.0"
python-dotenv = "^0.20.0"
celery = "^5.2.3"
pydantic = "^1.9.0"
redis = "^4.2.1"
gevent = "^21.12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
